--- a/apps/nfdiv/automation/kustomization.yaml
+++ b/apps/nfdiv/automation/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
   - ../nfdiv-case-api/image-policy.yaml
   - ../nfdiv-cron-eligible-for-switch-to-sole/image-repo.yaml
   - ../nfdiv-cron-eligible-for-switch-to-sole/image-policy.yaml
-
+  - ../nfdiv-cron-partner-not-applied-for-final-order/image-repo.yaml
+  - ../nfdiv-cron-partner-not-applied-for-final-order/image-policy.yaml
