--- a/apps/nfdiv/ithc/00/kustomization.yaml
+++ b/apps/nfdiv/ithc/00/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
   - ../base
 patchesStrategicMerge:
   - ../../nfdiv-cron-eligible-for-switch-to-sole/ithc/00.yaml
+  - ../../nfdiv-cron-partner-not-applied-for-final-order/ithc/00.yaml
