--- a/apps/nfdiv/ithc/base/kustomization.yaml
+++ b/apps/nfdiv/ithc/base/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../nfdiv-cron-eligible-for-switch-to-sole/nfdiv-cron-eligible-for-switch-to-sole.yaml
+  - ../../nfdiv-cron-partner-not-applied-for-final-order/nfdiv-cron-partner-not-applied-for-final-order.yaml
 patchesStrategicMerge:
   - ../../identity/ithc.yaml
