--- a/apps/nfdiv/prod/01/kustomization.yaml
+++ b/apps/nfdiv/prod/01/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
   - ../base
 patchesStrategicMerge:
   - ../../nfdiv-cron-eligible-for-switch-to-sole/prod/01.yaml
+  - ../../nfdiv-cron-partner-not-applied-for-final-order/prod/01.yaml
