--- a/apps/nfdiv/prod/base/kustomization.yaml
+++ b/apps/nfdiv/prod/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../nfdiv-cron-eligible-for-switch-to-sole/nfdiv-cron-eligible-for-switch-to-sole.yaml
+  - ../../nfdiv-cron-partner-not-applied-for-final-order/nfdiv-cron-partner-not-applied-for-final-order.yaml
 namespace: nfdiv
 patchesStrategicMerge:
   - ../../identity/prod.yaml
