--- a/apps/et/et-sya/et-sya-demo.yaml
+++ b/apps/et/et-sya/et-sya-demo.yaml
@@ -11,6 +11,9 @@ spec:
       image: hmctspublic.azurecr.io/et/sya:prod-db045ef-20221014081036 #{"$imagepolicy": "flux-system:et-sya"}
       ingressHost: et-sya.demo.platform.hmcts.net
       ingressClass: traefik-no-proxy
+      environment:
+        PCQ_URL: 'https://pcq.aat.platform.hmcts.net/service-endpoint'
+        PCQ_HEALTH_URL: 'https://pcq.aat.platform.hmcts.net/health'
   chart:
     spec:
       chart: ./stable/et-sya
