--- a/k8s/namespaces/rpe/rpe-send-letter-service/aat.yaml
+++ b/k8s/namespaces/rpe/rpe-send-letter-service/aat.yaml
@@ -8,5 +8,6 @@ spec:
       environment:
         ENCRYPTION_ENABLED: true
         CIVIL_SERVICE_ENABLED: true
-        FILE_CLEANUP_ENABLED: false
+        FILE_CLEANUP_ENABLED: "false"
+        OLD_LETTER_CONTENT_CLEANUP_ENABLED: "false"
         REFRESH_PODS: true
