--- a/k8s/namespaces/dm-store/dm-store/perftest.yaml
+++ b/k8s/namespaces/dm-store/dm-store/perftest.yaml
@@ -11,4 +11,4 @@ spec:
         ENABLE_TTL: false
         DOCUMENT_TASK_MILLISECONDS: 300000
         REFRESH_FLAG: VAR2
-        MAX_MEDIA_FILE_SIZE: 4096
+#        MAX_MEDIA_FILE_SIZE: 4096
