--- a/apps/financial-remedy/finrem-cos/demo.yaml
+++ b/apps/financial-remedy/finrem-cos/demo.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/finrem/cos:pr-799 #{"$imagepolicy": "flux-system:demo-finrem-cos"}
+      image: hmctspublic.azurecr.io/finrem/cos:pr-799-b8c57ed-20221007141503 #{"$imagepolicy": "flux-system:demo-finrem-cos"}
       environment:
         FEATURE_PBA_CASE_TYPE: true
         FEATURE_USE_USER_TOKEN: true
@@ -16,7 +16,7 @@ spec:
         PAYMENT_API_URL: "http://payment-api-demo.service.core-compute-demo.internal"
         DOCUMENT_MANAGEMENT_STORE_URL: "http://dm-store-demo.service.core-compute-demo.internal"
         SEND_LETTER_SERVICE_BASEURL: "http://rpe-send-letter-service-demo.service.core-compute-demo.internal"
-        TRIGGER_DEPLOY_2: trigger3
+        TRIGGER_DEPLOY_DEMO: trigger0
       keyVaults:
         finrem:
           secrets:
