--- a/clusters/demo/base/kustomization.yaml
+++ b/clusters/demo/base/kustomization.yaml
@@ -22,6 +22,8 @@ resources:
   - ../../../apps/ccd/base/kustomize.yaml
   - ../../../apps/xui/base/kustomize.yaml
   - ../../../apps/probate/base/kustomize.yaml
+  - ../../../apps/sptribs/base/kustomize.yaml
+
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
