--- a/apps/aso/aso/aso.yaml
+++ b/apps/aso/aso/aso.yaml
@@ -16,6 +16,6 @@ spec:
   valuesFrom:
   - kind: Secret
     name: aso-controller-settings
-    values:
+  values:
     installCRDs:
-      enabled: false
+      enabled: true
