--- a/k8s/namespaces/bar/bar-web-int/demo.yaml
+++ b/k8s/namespaces/bar/bar-web-int/demo.yaml
@@ -7,6 +7,7 @@ spec:
   values:
     nodejs:
       disableTraefikTls: false
+      ingressClass: traefik-no-proxy
       image: hmctspublic.azurecr.io/bar/web:prod-9dcca15-20220808172206 #{"$imagepolicy": "flux-system:demo-int-bar-web"}
       environment:
         DUMMY_RESTART_VAR: true
