--- a/k8s/namespaces/fees-pay/fees-register-frontend-int/demo.yaml
+++ b/k8s/namespaces/fees-pay/fees-register-frontend-int/demo.yaml
@@ -7,6 +7,7 @@ spec:
   values:
     nodejs:
       disableTraefikTls: false
+      ingressClass: traefik-no-proxy
       image: hmctspublic.azurecr.io/fees-register/frontend:pr-432-d700dd3-20221013102945 #{"$imagepolicy": "flux-system:demo-int-fees-register-frontend"}
       environment:
         DUMMY_RESTART_VAR: true
