--- a/k8s/namespaces/bsp/bulk-scan-orchestrator/prod.yaml
+++ b/k8s/namespaces/bsp/bulk-scan-orchestrator/prod.yaml
@@ -14,6 +14,7 @@ spec:
         DELETE_ENVELOPES_DLQ_MESSAGES_CRON: "0 30 0/2 * * *"
         DELETE_ENVELOPES_DLQ_MESSAGES_TTL: "PT72H"
         CDAM_ENABLED: "true"
+        REFORM_LOG_LEVEL: "DEBUG"
       testsConfig:
         memoryLimits: "3072Mi"
         serviceAccountName: tests-service-account
