--- a/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
+++ b/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
@@ -154,7 +154,7 @@ spec:
                     title: CDM Master Builds Dashboard
                 - buildMonitor:
                     includeRegex: >-
-                      ^HMCTS_(\w_to_\w_Nightly).*\/(?!.*ccd-case-disposer|.*ccd-case-migration-starter|.*ccd-next-hearing-date-updater)(ccd.*|aac.*|cpo.*|hmc.*|ts.*)\/master
+                      ^HMCTS_(\w_to_\w_Nightly).*\/(?!.*ccd-case-disposer|.*ccd-cache-warm-performance|.*ccd-cdm-performance|.*ccd-case-migration-starter|.*ccd-next-hearing-date-updater)(ccd.*|aac.*|cpo.*|hmc.*|ts.*)\/master
                     name: CDM Nightly
                     recurse: true
                     title: CDM Nightly Builds Dashboard
