--- a/apps/probate/ithc/base/kustomization.yaml
+++ b/apps/probate/ithc/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../probate-business-service/probate-business-service.yaml
 namespace: probate
 patchesStrategicMerge:
   - ../../probate-caveats-fe/ithc.yaml
