--- a/k8s/namespaces/fact/fact-admin/demo.yaml
+++ b/k8s/namespaces/fact/fact-admin/demo.yaml
@@ -6,5 +6,7 @@ spec:
   values:
     nodejs:
       disableTraefikTls: false
+      image: hmctspublic.azurecr.io/fact/admin:pr-578-3b7eb61-20221017151952 #{"$imagepolicy": "flux-system:demo-fact-admin"}
       environment:
+        NODE_ENV: development
         SECURE_FLAG: false
