--- a/apps/probate/prod/01/kustomization.yaml
+++ b/apps/probate/prod/01/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 namespace: probate
 resources:
   - ../base
+patchesStrategicMerge:
+  - ../../probate-cron-make-dormant-cases/prod/01.yaml
+  - ../../probate-cron-reactivate-dormant-cases/prod/01.yaml
