--- a/apps/admin/traefik2/perftest/00.yaml
+++ b/apps/admin/traefik2/perftest/00.yaml
@@ -8,3 +8,17 @@ spec:
     service:
       spec:
         loadBalancerIP: "10.48.79.250"
+    affinity:
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+                - key: app.kubernetes.io/name
+                  operator: In
+                  values:
+                    - traefik
+                - key: app
+                  operator: In
+                  values:
+                    - konnectivity-agent
+            topologyKey: "kubernetes.io/hostname"
