--- a/k8s/namespaces/rpe/rpe-send-letter-service/rpe-send-letter-service.yaml
+++ b/k8s/namespaces/rpe/rpe-send-letter-service/rpe-send-letter-service.yaml
@@ -14,6 +14,6 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/rpe/send-letter-service:prod-25addd3-20221018124527 #{"$imagepolicy": "flux-system:rpe-send-letter-service"}
       environment:
-        FILE_CLEANUP_ENABLED: "true"
-        OLD_LETTER_CONTENT_CLEANUP_ENABLED: "true"
+        FILE_CLEANUP_ENABLED: "false"
+        OLD_LETTER_CONTENT_CLEANUP_ENABLED: "false"
         FTP_FINGERPRINT: "SHA256:3tX3DIkqd1Loz2alHfnt+qjHocfxk0YUOZHlnf9Zgdk="
