--- a/apps/xui/xui-webapp-ac-integration/demo.yaml
+++ b/apps/xui/xui-webapp-ac-integration/demo.yaml
@@ -50,4 +50,6 @@ spec:
         SERVICES_REFUNDS_API_URL: http://ccpay-refunds-api-demo.service.core-compute-demo.internal
         SERVICES_NOTIFICATIONS_API_URL: http://ccpay-notifications-service-demo.service.core-compute-demo.internal
         SERVICES_PAYMENTS_URL: http://payment-api-demo.service.core-compute-demo.internal
+        SERVICES_IDAM_SERVICE_OVERRIDE: true
+        SERVICES_IDAM_CLIENT_ID: xuiwebapp_passport_0_7
       image: hmctspublic.azurecr.io/xui/webapp:pr-4218-36e25ea-20250130134332 #{"$imagepolicy": "flux-system:demo-xui-webapp-ac-integration"}
