--- a/apps/ccd/ccd-case-disposer/aat.yaml
+++ b/apps/ccd/ccd-case-disposer/aat.yaml
@@ -17,5 +17,5 @@ spec:
         DOCUMENT_STORE_HOST: "http://dm-store-aat.service.core-compute-aat.internal"
         DEFINITION_STORE_HOST: "http://ccd-definition-store-api-aat.service.core-compute-aat.internal"
         LOG_AND_AUDIT_HOST: "http://lau-case-backend-aat.service.core-compute-aat.internal"
-        DELETE_CASE_TYPES:
-        SIMULATED_CASE_TYPES: "Asylum,Bail"
+        DELETE_CASE_TYPES: "Asylum,Bail"
+        SIMULATED_CASE_TYPES:
