--- a/apps/ccd/ccd-case-disposer/demo.yaml
+++ b/apps/ccd/ccd-case-disposer/demo.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      schedule: "0/15 * * * *"
+      schedule: "2 0/6 * * *"
       environment:
         ELASTIC_SEARCH_ENABLED: true
         DATA_STORE_DB_PORT: 5432
