--- a/apps/sscs/sscs-tribunals-api/aat.yaml
+++ b/apps/sscs/sscs-tribunals-api/aat.yaml
@@ -17,7 +17,7 @@ spec:
         SECURE_DOC_STORE_FEATURE: true
         POSTPONEMENTS_FEATURE: true
         SSCS2_FEATURE: true
-        DUMMY_PROPERTY: false
+        DUMMY_PROPERTY: true
         POST_HEARINGS_FEATURE: true
         POST_HEARINGS_B_FEATURE: true
         WORK_ALLOCATION_FEATURE: false
