--- a/apps/wa/wa-task-management-api/aat.yaml
+++ b/apps/wa/wa-task-management-api/aat.yaml
@@ -15,4 +15,4 @@ spec:
         ALLOWED_JURISDICTIONS: wa,ia,sscs,civil,publiclaw,privatelaw,st_cic,employment,sscs,divorce
         ALLOWED_CASE_TYPES: asylum,wacasetype,sscs,civil,generalapplication,care_supervision_epo,prlapps,criminalinjuriescompensation,et_englandwales,et_scotland,benefit,financialremedycontested,financialremedymvp2,finrem_exceptionrecord,privatelaw_exceptionrecord
         SPRING_PROFILES_ACTIVE: "replica"
-        MANDATORY_TASK_FIELD_CHECK_ENABLED: false
+        MANDATORY_TASK_FIELD_CHECK_ENABLED: true
