--- a/apps/bsp/rpe-send-letter-service/prod.yaml
+++ b/apps/bsp/rpe-send-letter-service/prod.yaml
@@ -8,6 +8,7 @@ spec:
       memoryLimits: "4Gi"
       memoryRequests: "1Gi"
       environment:
+        DELETE_OLD_LETTERS_CRON: 0 */10 19-23 * * *
         SMTP_HOST: smtp.office365.com
         FTP_DOWNTIME_FROM: 16:00
         FTP_DOWNTIME_TO: 18:00
