--- a/apps/ia/ia-case-api/demo.yaml
+++ b/apps/ia/ia-case-api/demo.yaml
@@ -15,8 +15,6 @@ spec:
         POSTGRES_USERNAME: pgadmin
         LOCATION_REF_DATA_URL: http://rd-location-ref-api-demo.service.core-compute-demo.internal
         FEES_REGISTER_API_URL: "http://fees-register-api-demo.service.core-compute-demo.internal"
-        DUMMY_VAR: "true"
-        SAVE_NOTIFICATIONS_DATA_SCHEDULE_HOUR: 17
-        SAVE_NOTIFICATIONS_DATA_SCHEDULE_MAX_MINUTES: 5
+        DUMMY_VAR: "false"
       spotInstances:
         enabled: true
