--- a/apps/bsp/rpe-send-letter-service/demo.yaml
+++ b/apps/bsp/rpe-send-letter-service/demo.yaml
@@ -7,6 +7,7 @@ spec:
     java:
       image: hmctspublic.azurecr.io/rpe/send-letter-service:pr-2679-3928256-20250128102532
       environment:
-        DELETE_OLD_LETTERS_CRON: 0 */10 1-23 * * *
+        DELETE_OLD_LETTERS_CRON: 0 */20 1-23 * * 0-6
+        BATCH_SIZE: 3500
         ENCRYPTION_ENABLED: false
         CIVIL_SERVICE_ENABLED: true
