--- a/apps/ethos/repl-docmosis-service/demo.yaml
+++ b/apps/ethos/repl-docmosis-service/demo.yaml
@@ -9,6 +9,6 @@ spec:
   releaseName: repl-docmosis-service
   values:
     java:
-      image: hmctspublic.azurecr.io/ethos/repl-docmosis-backend:pr-2566-0d2c825-20250724073719 #{"$imagepolicy": "flux-system:demo-repl-docmosis-service"}
+      image: hmctspublic.azurecr.io/ethos/repl-docmosis-backend:pr-2566-0d2c825-20250724073719 #{"$imagepolicy": "flux-system:repl-docmosis-service"}
       environment:
         TRIGGER_RESTART: 2
