--- a/apps/sscs/sscs-tribunals-api/demo.yaml
+++ b/apps/sscs/sscs-tribunals-api/demo.yaml
@@ -59,7 +59,7 @@ spec:
         ADJOURNMENT_ENABLED: true
         POST_HEARING_ENABLED: true
         TRIBUNAL_INTERNAL_DOCUMENTS_ENABLED: true
-        DEFAULT_PANEL_COMPOSITION_ENABLED: false
+        DEFAULT_PANEL_COMPOSITION_ENABLED: true
         FTA_COMMUNICATION_ENABLED: true
         IBC_NI_POSTCODES_FEATURE: true
         HEARING_DURATION_ENABLED: true
