--- a/apps/help-with-fees/help-with-fees-benefit-checker-api/demo-image-policy.yaml
+++ b/apps/help-with-fees/help-with-fees-benefit-checker-api/demo-image-policy.yaml
@@ -5,3 +5,6 @@ metadata:
 spec:
   imageRepositoryRef:
     name: help-with-fees-benefit-checker-api
+  filterTags:
+    pattern: '^pr-185-[a-f0-9]+-(?P<ts>[0-9]+'
+    extract: '$ts'
