--- a/apps/private-law/prl-cos/aat.yaml
+++ b/apps/private-law/prl-cos/aat.yaml
@@ -19,7 +19,7 @@ spec:
       image: hmctspublic.azurecr.io/prl/cos:prod-d0547ed-20250730131647 #{"$imagepolicy": "flux-system:prl-cos"}
       environment:
         FEATURE_EXAMPLE: true
-        DUMMY_ENV: true
+        DUMMY_ENV: false
         APP_ENV: "aat"
     global:
       environment: aat
