--- a/apps/private-law/prl-cron-fm5-reminder/demo.yaml
+++ b/apps/private-law/prl-cron-fm5-reminder/demo.yaml
@@ -36,9 +36,10 @@ spec:
         AM_ROLE_ASSIGNMENT_API_URL: http://am-role-assignment-service-demo.service.core-compute-demo.internal
         HEARING_API_BASEURL: http://fis-hmc-api-demo.service.core-compute-demo.internal
         APP_ENV: "demo"
-      schedule: 15 12 * * *
+      schedule: 15 11 * * *
     global:
       jobKind: CronJob
       enableKeyVaults: true
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       environment: demo
+      debug: true
