--- a/apps/dm-store/dm-store/demo.yaml
+++ b/apps/dm-store/dm-store/demo.yaml
@@ -11,3 +11,4 @@ spec:
         TEST_VAR: refresh_true
         UPLOAD_BLOCK_SIZE: 8
         UPLOAD_MAX_CONCURRENCY: 10
+        MAX_SINGLE_UPLOAD_SIZE: 100
