--- a/apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomization.yaml
+++ b/apps/monitoring/kube-prometheus-stack-crds-upgrade/kustomization.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1
 kind: Kustomization
 resources:
   - https://raw.githubusercontent.com/prometheus-community/helm-charts/kube-prometheus-stack-76.3.0/charts/kube-prometheus-stack/charts/crds/crds/crd-alertmanagerconfigs.yaml
