--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -14,7 +14,7 @@ spec:
       memoryRequests: "1024Mi"
       memoryLimits: "4096Mi"
       restartPolicy: Never
-      schedule: "15 20-23/0-5 * * *"
+      schedule: "15 20-23,0-5 * * 1-4"
       keyVaults:
         sscs:
           resourceGroup: sscs
