--- a/apps/xui/xui-webapp-caa-assigned-case-view/demo.yaml
+++ b/apps/xui/xui-webapp-caa-assigned-case-view/demo.yaml
@@ -8,7 +8,7 @@ spec:
       ingressHost: manage-case-caa-assigned-case-view.demo.platform.hmcts.net
       environment:
         FEATURE_SECURE_COOKIE_ENABLED: false
-        DUMMY_VAR_FOR_RESTART: 2
+        DUMMY_VAR_FOR_RESTART: 1
         SERVICES_MARKUP_API: http://em-npa-demo.service.core-compute-demo.internal
         JURISDICTIONS: DIVORCE,PROBATE,FR,PUBLICLAW,IA,SSCS,EMPLOYMENT,CIVIL,AUTOTEST1,CMC,HRS,BEFTA_JURISDICTION_1,PRIVATELAW,BEFTA_JURISDICTION_2,BEFTA_JURISDICTION_3,ST_CIC
         WA_SUPPORTED_JURISDICTIONS: IA,CIVIL,PRIVATELAW,PUBLICLAW,EMPLOYMENT,SSCS,ST_CIC
@@ -18,6 +18,7 @@ spec:
         DEBUG: xuiNode:*
         SERVICES_IDAM_OAUTH_CALLBACK_URL: oauth2/callback
         STUB: false
+        FEATURE_JRD_E_LINKS_V2_ENABLED: true
         SERVICES_CCD_CASE_ASSIGNMENT_API: http://aac-manage-case-assignment-demo.service.core-compute-demo.internal
         SERVICES_PRD_API: http://rd-professional-api-demo.service.core-compute-demo.internal
         SERVICES_ICP_API: http://em-icp-demo.service.core-compute-demo.internal
