--- a/apps/fees-pay/ccpay-callback-function/demo.yaml
+++ b/apps/fees-pay/ccpay-callback-function/demo.yaml
@@ -11,7 +11,7 @@ spec:
         S2S_URL: http://rpe-service-auth-provider-demo.service.core-compute-demo.internal
         MICROSERVICE_PAYMENT_APP: "payment_app"
         SERVICE_LOGGING_ENABLED: false
-        DUMMY_RESTART_VAR: true
+        DUMMY_RESTART_VAR: false
       keyVaults:
         "ccpay":
           secrets:
