--- a/apps/ccd/ccd-logstash-fpl/perftest.yaml
+++ b/apps/ccd/ccd-logstash-fpl/perftest.yaml
@@ -2,6 +2,8 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: ccd-logstash-fpl
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
 spec:
   releaseName: ccd-logstash-fpl
   values:
