--- a/apps/aac/manage-case-assignment/perftest.yaml
+++ b/apps/aac/manage-case-assignment/perftest.yaml
@@ -5,6 +5,17 @@ metadata:
 spec:
   values:
     java:
+      readinessDelay: 45
+      readinessTimeout: 5
+      readinessPeriod: 15
+      livenessDelay: 45
+      livenessTimeout: 5
+      livenessPeriod: 15
+      livenessFailureThreshold: 3
+      startupDelay: 60
+      startupTimeout: 5
+      startupPeriod: 10
+      startupFailureThreshold: 20
       image: hmctspublic.azurecr.io/aac/manage-case-assignment:prod-afacb50-20250813143004 #{"$imagepolicy": "flux-system:perftest-manage-case-assignment"}
       environment:
         MANAGE_CASE_S2S_AUTHORISED_SERVICES: xui_webapp,ccd_data,civil_service,finrem_case_orchestration,divorce_frontend,iac,nfdiv_cos,fpl_case_service,prl_cos_api,et_cos,nfdiv_case_api,et_sya_api
