--- a/apps/et/et-syr/demo.yaml
+++ b/apps/et/et-syr/demo.yaml
@@ -9,3 +9,18 @@ spec:
     nodejs:
       image: hmctspublic.azurecr.io/et/syr:prod-c5fe57a-20250813102734 #{"$imagepolicy": "flux-system:demo-et-syr"}
       ingressHost: et-syr.demo.platform.hmcts.net
+      environment:
+        MIGRATION_CASETYPE: Leeds
+        ROOT_LOGGING_LEVEL: debug
+        REDIS_HOST: et-sya-session-storage-demo.redis.cache.windows.net
+      keyVaults:
+        et:
+          resourceGroup: et
+          secrets:
+            - AppInsightsInstrumentationKey
+            - idam-secret
+            - name: et-sya-redis-access-key
+              alias: et-syr-redis-access-key
+            - os-places-token
+            - pcq-token-key
+            - launch-darkly-sdk-key
