--- a/apps/financial-remedy/finrem-cron-one-off-task/demo/demo.yaml
+++ b/apps/financial-remedy/finrem-cron-one-off-task/demo/demo.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: finrem-cron-one-off-task
   values:
     job:
-      schedule: "45 11 11 8 *"
+      schedule: "30 10 15 8 *"
       image: hmctspublic.azurecr.io/finrem/cos:prod-8787fed-20250815072934 #{"$imagepolicy": "flux-system:demo-finrem-cos"}
       environment:
         FEATURE_PBA_CASE_TYPE: true
@@ -21,11 +21,11 @@ spec:
         SEND_LETTER_SERVICE_BASEURL: "http://rpe-send-letter-service-demo.service.core-compute-demo.internal"
         CASE_DOCUMENT_AM_URL: "http://ccd-case-document-am-api-demo.service.core-compute-demo.internal"
         TASK_NAME: ManageHearingsMigrationTask
-        CRON_DRY_RUN: false
+        CRON_DRY_RUN: true
         CRON_MANAGE_HEARINGS_MIGRATION_ENABLED: true
         CRON_MANAGE_HEARINGS_MIGRATION_ROLLBACK: true
         CRON_MANAGE_HEARINGS_MIGRATION_CASE_LIST_FILENAME: "manageHearingsMigration-encrypted.csv"
-        CRON_MANAGE_HEARINGS_MIGRATION_VERSION: "v1rollback"
+        CRON_MANAGE_HEARINGS_MIGRATION_VERSION: "v1dryRun"
     global:
       jobKind: CronJob
       enableKeyVaults: true
