--- a/apps/sscs/sscs-tribunals-frontend/aat-image-policy.yaml
+++ b/apps/sscs/sscs-tribunals-frontend/aat-image-policy.yaml
@@ -2,9 +2,11 @@ apiVersion: image.toolkit.fluxcd.io/v1alpha2
 kind: ImagePolicy
 metadata:
   name: aat-sscs-tribunals-frontend
+  annotations:
+    hmcts.github.com/prod-automated: disabled
 spec:
   filterTags:
-    pattern: '^prod-[a-f0-9]+-(?P<ts>[0-9]+)'
+    pattern: '^pr-1825-[a-f0-9]+-(?P<ts>[0-9]+)'
     extract: '$ts'
   policy:
     alphabetical:
