--- a/apps/pcq/pcq-backend/aat.yaml
+++ b/apps/pcq/pcq-backend/aat.yaml
@@ -15,5 +15,5 @@ spec:
       schedule: "0 17 * * *"
       environment:
         PCQ_DISPOSER_ENABLED: true
-        PCQ_DISPOSER_DRY_RUN: false
+        PCQ_DISPOSER_DRY_RUN: true
         PCQ_DISPOSER_RATE_LIMIT: 1000
