--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -14,7 +14,7 @@ spec:
       memoryRequests: "1024Mi"
       memoryLimits: "4096Mi"
       restartPolicy: Never
-      schedule: "15 20-23,0-4 * * 1-4"
+      schedule: "15 20-23,0-4 * * *"
       keyVaults:
         sscs:
           resourceGroup: sscs
@@ -64,7 +64,7 @@ spec:
         RD_LOCATION_REF_API_URL: http://rd-location-ref-api-prod.service.core-compute-prod.internal
         JUDICIAL_REF_API_URL: http://rd-judicial-api-prod.service.core-compute-prod.internal
         ARCHIVE_OLD_DRAFTS_ENABLED: true
-        DEFAULT_PANEL_COMPOSITION_ENABLED: true
+        DEFAULT_PANEL_COMPOSITION_ENABLED: false
         ULR_USE_PRE_FETCHED_CASE_LIST: false
         CASE_MIGRATION_MAX_RETRIES: 5
         MIGRATION_QUERY_SIZE: 300
