--- a/apps/financial-remedy/finrem-cos/prod.yaml
+++ b/apps/financial-remedy/finrem-cos/prod.yaml
@@ -21,4 +21,5 @@ spec:
         FEATURE_SEND_TO_FRC: true
         FEATURE_CFV_ENABLED: true
         EXPRESS_PILOT_ENABLED: true
+        MANAGE_HEARING_ENABLED: false
         VAR_FLUX_V2: trigger3
