--- a/apps/bsp/bulk-scan-processor/prod.yaml
+++ b/apps/bsp/bulk-scan-processor/prod.yaml
@@ -17,3 +17,4 @@ spec:
         STORAGE_BLOB_LEASE_TIMEOUT: 60
         UPLOAD_MAX_TRIES: 30
         TRIGGER_VAR: 2
+        NOTIFICATION_STALE_TIMEOUT_HR: 0
