--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -14,7 +14,7 @@ spec:
       memoryRequests: "1024Mi"
       memoryLimits: "4096Mi"
       restartPolicy: Never
-      schedule: "15 20-23,0-4 * * *"
+      schedule: "30 20-23,0-4 * * *"
       keyVaults:
         sscs:
           resourceGroup: sscs
@@ -65,7 +65,7 @@ spec:
         JUDICIAL_REF_API_URL: http://rd-judicial-api-prod.service.core-compute-prod.internal
         ARCHIVE_OLD_DRAFTS_ENABLED: true
         DEFAULT_PANEL_COMPOSITION_ENABLED: true
-        ULR_USE_PRE_FETCHED_CASE_LIST: true
+        ULR_USE_PRE_FETCHED_CASE_LIST: false
         CASE_MIGRATION_MAX_RETRIES: 5
         MIGRATION_QUERY_SIZE: 300
         MIGRATION_CASE_LIMIT: 100
