--- a/apps/ia/ia-cron-ccd-migration-tool/demo-00.yaml
+++ b/apps/ia/ia-cron-ccd-migration-tool/demo-00.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     job:
       image: hmctspublic.azurecr.io/ia/cron-ccd-migration-tool:pr-188-b1027b4-20250718161611 #{"$imagepolicy": "flux-system:demo-ia-cron-ccd-migration-tool"}
-      schedule: "59 08 18 7 *"
+      schedule: "01 13 20 8 *"
       cpuRequests: "1000m"
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
@@ -24,7 +24,7 @@ spec:
         MIGRATION_NUMBER_OF_THREADS: 20
         SERVICE_ID: BFA1
         LOCATION_REF_DATA_URL: "http://rd-location-ref-api-demo.service.core-compute-demo.internal"
-        MIGRATION_CASE_ID: 1591628107549181,1612270880026387,1649076846711229,1651667946523483
+        MIGRATION_CASE_ID: 1651661629428177,1651224685692507,1653393065932425,1654513786556257,1655824328285050
         MIGRATE_IS_ARIA_MIGRATED: "false"
         MIGRATE_APPEAL_STARTED_TTL_SET: "false"
         MIGRATE_APPLICATION_STARTED_TTL_SET: "false"
