--- a/apps/xui/xui-webapp/perftest.yaml
+++ b/apps/xui/xui-webapp/perftest.yaml
@@ -10,7 +10,7 @@ spec:
       memoryRequests: "3Gi"
       ingressHost: manage-case.perftest.platform.hmcts.net
       environment:
-        DUMMY_VAR: true
+        DUMMY_VAR: false
         JURISDICTIONS: DIVORCE,PROBATE,FR,PUBLICLAW,IA,SSCS,CMC,EMPLOYMENT,CIVIL,HRS,BEFTA_JURISDICTION_1,BEFTA_JURISDICTION_2,PRIVATELAW,BEFTA_JURISDICTION_3,DISPOSER_MASTER,ST_CIC,BEFTA_MASTER
         HEARINGS_JURISDICTIONS: SSCS,PRIVATELAW,CIVIL,IA,EMPLOYMENT,ST_CIC
         GLOBAL_SEARCH_SERVICES: IA,CIVIL,PRIVATELAW,PUBLICLAW,SSCS,ST_CIC,EMPLOYMENT
@@ -56,4 +56,4 @@ spec:
         SERVICES_TRANSLATION_API_URL: http://ts-translation-service-perftest.service.core-compute-perftest.internal
         SERVICES_NOTIFICATIONS_API_URL: http://ccpay-notifications-service-perftest.service.core-compute-perftest.internal
         SERVICES_PAYMENTS_URL: http://payment-api-perftest.service.core-compute-perftest.internal
-      image: hmctspublic.azurecr.io/xui/mo-webapp:prod-aa4eeb1-20250819145058 #{"$imagepolicy": "flux-system:perftest-xui-mo-webapp"}
+      image: hmctspublic.azurecr.io/xui/mo-webapp:prod-6b4c8b5-20250819151944 #{"$imagepolicy": "flux-system:perftest-xui-mo-webapp"}
