--- a/apps/sscs/sscs-ccd-case-migration/aat.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/aat.yaml
@@ -8,7 +8,7 @@ spec:
   values:
     job:
       suspend: false
-      image: hmctspublic.azurecr.io/sscs/ccd-case-migration:pr-114-bdd042f-20250820134714 #{"$imagepolicy": "flux-system:aat-sscs-ccd-case-migration"}
+      image: hmctspublic.azurecr.io/sscs/ccd-case-migration:prod-6715133-20250814111846 #{"$imagepolicy": "flux-system:sscs-ccd-case-migration"}
       cpuRequests: "1000m"
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
