--- a/apps/sscs/sscs-ccd-case-migration/prod.yaml
+++ b/apps/sscs/sscs-ccd-case-migration/prod.yaml
@@ -64,8 +64,8 @@ spec:
         RD_LOCATION_REF_API_URL: http://rd-location-ref-api-prod.service.core-compute-prod.internal
         JUDICIAL_REF_API_URL: http://rd-judicial-api-prod.service.core-compute-prod.internal
         ARCHIVE_OLD_DRAFTS_ENABLED: true
-        DEFAULT_PANEL_COMPOSITION_ENABLED: false
-        ULR_USE_PRE_FETCHED_CASE_LIST: false
+        DEFAULT_PANEL_COMPOSITION_ENABLED: true
+        ULR_USE_PRE_FETCHED_CASE_LIST: true
         CASE_MIGRATION_MAX_RETRIES: 5
         MIGRATION_QUERY_SIZE: 300
         MIGRATION_CASE_LIMIT: 100
