--- a/apps/family-public-law/fpl-cron-ccd-data-migration-tool/prod/00.yaml
+++ b/apps/family-public-law/fpl-cron-ccd-data-migration-tool/prod/00.yaml
@@ -6,9 +6,9 @@ spec:
   releaseName: fpl-cron-ccd-data-migration-tool
   values:
     job:
-      schedule: "25 15 24 07 *"
+      schedule: "35 18 21 08 *"
       environment:
         ENABLED: true
-        MIGRATION_ID: DFPL-2805
+        MIGRATION_ID: DFPL-log
         IDAM_API_URL: https://idam-api.platform.hmcts.net
         USE_CASE_ID_MAPPING: true
