--- a/apps/ia/ia-cron-ccd-migration-tool/demo-00.yaml
+++ b/apps/ia/ia-cron-ccd-migration-tool/demo-00.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     job:
       image: hmctspublic.azurecr.io/ia/cron-ccd-migration-tool:pr-188-2a7baa6-20250822150105 #{"$imagepolicy": "flux-system:demo-ia-cron-ccd-migration-tool"}
-      schedule: "50 14 22 8 *"
+      schedule: "25 15 22 8 *"
       cpuRequests: "1000m"
       cpuLimits: "2500m"
       memoryRequests: "1024Mi"
@@ -31,4 +31,4 @@ spec:
         MIGRATE_APPLICATION_STARTED_BY_LR_TTL_SET: "false"
         MIGRATION_PA_APPEALS_IN_PENDING_PAYMENT: "false"
         MIGRATION_VIRTUAL_REGION_LOCATION_IN_EXISTING_APPEALS: "true"
-        RESTART_PODS: "Yes"
+        RESTART_PODS: "true"
